feat(react ts init)

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": "./",
     "module": "commonjs",
     "paths": {
-      "@/*": ["./src/*"],
+      "@*": ["./src*"],
       "store/*": ["./src/store"],
       "comps/*": ["./src/components"],
       "utils/*": ["./src/utils"],
