--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "@types/antd": "^1.0.0",
+    "@types/node": "^16.11.11",
+    "@types/react-document-title": "^2.0.5",
     "@types/react-redux": "^7.1.20",
+    "@types/react-router-dom": "^5.3.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "redux": "^4.1.2",
@@ -16,10 +19,10 @@
     "rollup-plugin-terser": "^7.0.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "@vitejs/plugin-react": "^1.0.0",
-    "typescript": "^4.3.2",
+    "typescript": "^4.5.2",
     "vite": "^2.6.4"
   }
 }
