--- a/package.json
+++ b/package.json
@@ -14,15 +14,24 @@
     "@types/react-router-dom": "^5.3.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "js-cookie": "^3.0.1",
+    "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "axios": "^0.24.0",
+    "antd": "^4.16.13",
+    "react-router-dom": "5.2.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@vitejs/plugin-react": "^1.0.0",
     "typescript": "^4.5.2",
-    "vite": "^2.6.4"
+    "sass": "^1.32.8",
+    "sass-loader": "8.0.0",
+    "style-resources-loader": "^1.4.1",
+    "vite": "^2.6.4",
+    "react-document-title": "^2.0.3"
   }
 }
