--- a/package.json
+++ b/package.json
@@ -7,31 +7,33 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@types/antd": "^1.0.0",
     "@types/node": "^16.11.11",
     "@types/react-document-title": "^2.0.5",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
+    "antd": "^4.16.13",
+    "axios": "^0.24.0",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "js-cookie": "^3.0.1",
     "react-redux": "^7.2.6",
+    "react-router-dom": "5.2.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "axios": "^0.24.0",
-    "antd": "^4.16.13",
-    "react-router-dom": "5.2.1"
+    "rollup-plugin-terser": "^7.0.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.1",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@vitejs/plugin-react": "^1.0.0",
-    "typescript": "^4.5.2",
+    "react-document-title": "^2.0.3",
     "sass": "^1.32.8",
     "sass-loader": "8.0.0",
     "style-resources-loader": "^1.4.1",
-    "vite": "^2.6.4",
-    "react-document-title": "^2.0.3"
+    "typescript": "^4.5.2",
+    "vite": "^2.6.4"
   }
 }
